force-app/main/default/objects/B2B_Parameter__c/B2B_Parameter__c.object-meta.xml
<CustomObject>
    <description>用來控管B2B程式的參數設定</description>
    <label>B2B Parameter</label>
    <nameField>
        <displayFormat>P{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>