force-app/main/default/objects/B2B_Parameter__c/fields/Desc__c.field-meta.xml
<CustomField>
    <fullName>Desc__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>