force-app/main/default/objects/B2B_Parameter__c/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <label>Menu</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>編輯旅客旅行文件資料</fullName>
            </value>
            <value>
                <fullName>團體選位/換位</fullName>
            </value>
            <value>
                <fullName>團體報到</fullName>
            </value>
            <value>
                <fullName>登機證列印/寄送</fullName>
            </value>
            <value>
                <fullName>團體報到結果綜整</fullName>
            </value>
            <value>
                <fullName>領隊/導遊管理</fullName>
            </value>
            <value>
                <fullName>帳號維護</fullName>
            </value>
            <value>
                <fullName>歷程記錄</fullName>
            </value>
            <value>
                <fullName>電子郵件</fullName>
            </value>
            <value>
                <fullName>登入/首頁</fullName>
            </value>
            <value>
                <fullName>登機證PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>