force-app/main/default/objects/B2B_Parameter__c/fields/ParameterCode__c.field-meta.xml
<CustomField>
    <fullName>ParameterCode__c</fullName>
    <description>API取用欄位名稱</description>
    <label>Parameter Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>