force-app/main/default/objects/B2B_Parameter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ParameterCode__c</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Desc__c</columns>
    <columns>Menu__c</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>