force-app/main/default/objects/B2B_Parameter__c/listViews/C1.listView-meta.xml
<ListView>
    <fullName>C1</fullName>
    <columns>NAME</columns>
    <columns>ParameterCode__c</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Desc__c</columns>
    <columns>Menu__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu__c</field>
        <operation>includes</operation>
        <value>編輯旅客旅行文件資料</value>
    </filters>
    <label>C1 編輯旅客旅行文件參數</label>
</ListView>