force-app/main/default/objects/B2B_Parameter__c/listViews/C2.listView-meta.xml
<ListView>
    <fullName>C2</fullName>
    <columns>NAME</columns>
    <columns>ParameterCode__c</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Desc__c</columns>
    <columns>Menu__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu__c</field>
        <operation>includes</operation>
        <value>團體選位/換位</value>
    </filters>
    <label>C2 團體選位/換位</label>
</ListView>