force-app/main/default/objects/B2B_Parameter__c/listViews/C3.listView-meta.xml
<ListView>
    <fullName>C3</fullName>
    <columns>NAME</columns>
    <columns>ParameterCode__c</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Desc__c</columns>
    <columns>Menu__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu__c</field>
        <operation>includes</operation>
        <value>團體報到</value>
    </filters>
    <label>C3 團體報到</label>
</ListView>