force-app/main/default/objects/B2B_Parameter__c/listViews/C4.listView-meta.xml
<ListView>
    <fullName>C4</fullName>
    <columns>NAME</columns>
    <columns>ParameterCode__c</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Desc__c</columns>
    <columns>Menu__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu__c</field>
        <operation>includes</operation>
        <value>登機證列印/寄送,登機證PDF</value>
    </filters>
    <label>C4 登機證列印/寄送</label>
</ListView>