force-app/main/default/objects/B2B_Parameter__c/listViews/C5.listView-meta.xml
<ListView>
    <fullName>C5</fullName>
    <columns>NAME</columns>
    <columns>ParameterCode__c</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Desc__c</columns>
    <columns>Menu__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu__c</field>
        <operation>includes</operation>
        <value>團體報到結果綜整</value>
    </filters>
    <label>C5 團體綜整報表</label>
</ListView>