force-app/main/default/objects/B2B_Parameter__c/listViews/Normal.listView-meta.xml
<ListView>
    <fullName>Normal</fullName>
    <columns>NAME</columns>
    <columns>ParameterCode__c</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Desc__c</columns>
    <columns>Menu__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu__c</field>
        <operation>excludes</operation>
        <value>編輯旅客旅行文件資料,團體報到,團體選位/換位,登機證列印/寄送,登機證PDF</value>
    </filters>
    <label>基本參數</label>
</ListView>