force-app/main/default/objects/B2B_Parameter__c/listViews/OperationLimited.listView-meta.xml
<ListView>
    <fullName>OperationLimited</fullName>
    <columns>NAME</columns>
    <columns>ParameterCode__c</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Desc__c</columns>
    <columns>Menu__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ParameterCode__c</field>
        <operation>contains</operation>
        <value>Limited</value>
    </filters>
    <label>OperationLimited</label>
</ListView>